# ToDo-List-App

./: MyTudo-v1.0.0-release.apk  MyTudo-v2.apk  todo-app-v2.apk.idsig  todo-app-v3.apk.idsig  todo-app.apk.idsig  todo-app.keystore
todo-api-rust/: .env.example  .env.production  .gitignore  Cargo.toml  Jenkinsfile  README.md  deploy.sh  nginx.conf
todo-api-rust/src/: config.rs  db.rs  errors.rs  main.rs
todo-api-rust/src/handlers/: auth.rs  lists.rs  mod.rs  root.rs  sync.rs  tasks.rs
todo-api-rust/src/middleware/: jwt.rs
todo-api-rust/src/models/: jwt.rs  list.rs  mod.rs  sync.rs  task.rs  user.rs
todo-app-tauri/: GUIA_RAPIDO.md  README.md  package.json  setup.ps1
todo-app-tauri/src-tauri/: Cargo.toml  tauri.conf.json
todo-app-tauri/src-tauri/capabilities/: default.json
todo-app-tauri/src-tauri/icons/: icon.icns
todo-app-tauri/src-tauri/src/: lib.rs  main.rs
todo-kotlin/: BUILD_GUIDE.md  build.gradle.kts  local.properties  swagger.json
todo-kotlin/app/: build.gradle.kts  proguard-rules.pro
todo-kotlin/app/src/main/: AndroidManifest.xml
todo-kotlin/app/src/main/res/color/: switch_track_color.xml
todo-kotlin/app/src/main/res/drawable/: bg_card_rounded.xml  bg_icon_circle.xml  ic_birthday.xml  ic_chevron_right.xml  ic_delete.xml  ic_dropdown.xml  ic_filter.xml  ic_home.xml  ic_launcher.xml  ic_lists.xml  switch_thumb.xml
todo-kotlin/app/src/main/res/layout/: dialog_create_list.xml  dialog_create_task.xml  fragment_home.xml  fragment_reset_password.xml  fragment_reset_verify_code.xml  item_add_folder.xml  item_list_modern.xml
todo-kotlin/app/src/main/res/menu/: menu_lists.xml
todo-kotlin/app/src/main/res/navigation/: auth_nav.xml
todo-kotlin/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
todo-kotlin/app/src/main/res/values-night/: colors.xml  themes.xml
todo-kotlin/keystore/: mytudo-release.jks
todo/api-php/: .htaccess  README.md  config.php  database.sql  index.php  install.php  jwt.php
todo/api-php/endpoints/: auth.php  lists.php  sync.php  tasks.php
(+50 files in other folders)
